--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -180,16 +180,20 @@ jobs:
         # https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-an-intermediate-environment-variable
         TAGS: ${{ steps.meta.outputs.tags }}
         DIGEST: ${{ steps.build-push.outputs.digest }}
+        COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
+        COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
         COSIGN_EXPERIMENTAL: "true"
       # This step uses the identity token to provision an ephemeral certificate
       # against the sigstore community Fulcio instance.
-      run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
+      run: echo "${TAGS}" | xargs -I {} cosign sign --yes --key env://COSIGN_PRIVATE_KEY {}@${DIGEST}
 
     - name: Sign SBOM with Cosign
       env:
+        COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
+        COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
         COSIGN_EXPERIMENTAL: "true"
       run: |
-        cosign sign-blob --yes sbom.spdx.json
+        cosign sign-blob --yes --key env://COSIGN_PRIVATE_KEY sbom.spdx.json
 
       
       #- name: Scan the image and upload dependency results
