--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -69,7 +69,8 @@ jobs:
         images: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}
         tags: |
           type=semver,pattern={{version}}
-          #type=sha
+          type=sha  # Tags the image with the commit SHA
+          type=ref,event=branch  # Tags the image with the branch name
 
           
     #- name: Build and push the Docker image
