--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -71,24 +71,7 @@ jobs:
           type=semver,pattern={{version}}
           type=sha  # Tags the image with the commit SHA
           type=ref,event=branch  # Tags the image with the branch name
-
-          
-    #- name: Build and push the Docker image
-      #uses: docker/build-push-action@v4
-    #  uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
-     # with:
-     #   context: .
-        #push: true
-     #   push: ${{ github.event_name != 'pull_request' }}
-        #tags:  dcompanyestall/githubactions_cas2_0:main
-        #tags: ${{ steps.meta.outputs.tags }}
-        #tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:main
-     #   tags: ${{ secrets.DOCKERHUB_USERNAME }}/githubactions_cas2_3:main
-     #   labels: ${{ steps.meta.outputs.labels }}
-        # Important: Add the load=true option to make the image available for subsequent steps
-     #   load: true
-     #   provenance: true
-
+         
     - name: Set up Buildx
       id: buildx
       uses: docker/setup-buildx-action@v3
@@ -116,16 +99,7 @@ jobs:
         image: ${{ secrets.DOCKERHUB_USERNAME }}/githubactions_cas2_3@${{ steps.build-push.outputs.digest }}
         format: "spdx-json"
         output-file: "sbom.spdx.json"
-    
-    #- name: Install Syft for SBOM generation
-    #  run: |
-    #    curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
-    #    syft version
-
-    #- name: Generate SBOM
-    #  run: |
-    #    syft ${{ secrets.DOCKERHUB_USERNAME }}/githubactions_cas2_0:v1 -o spdx-json > sbom.spdx.json
-
+        
     - name: Upload SBOM as artifact
       uses: actions/upload-artifact@v4
       with:
@@ -173,6 +147,9 @@ jobs:
         docker build --label "org.opencontainers.image.sbom=$SBOM_FILE" --tag $IMAGE_NAME .
         docker push $IMAGE_NAME
 
+    - name: Authenticate to Docker Hub
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+    
     # Sign the resulting Docker image digest except on PRs.
     # This will only write to the public Rekor transparency log when the Docker
     # repository is public to avoid leaking data.  If you would like to publish
@@ -205,52 +182,7 @@ jobs:
         COSIGN_EXPERIMENTAL: "true"
       run: |
         cosign sign-blob --yes --key env://COSIGN_PRIVATE_KEY sbom.spdx.json
-
-      
-      #- name: Scan the image and upload dependency results
-      #  uses: anchore/sbom-action@v0.18.0
-      #  with:
-      #    image: "dcompanyestall/githubactions_cas2_0:main"
-      #    output-file: sbom-spdx-json
-        #artifact-name: sbom-spdx-json
-        #id: sbom-spdx-json
-     #   dependency-snapshot: true
-        #debug: true 
-        #username: ${{ secrets.DOCKERHUB_USERNAME }}
-        #password: ${{ secrets.DOCKERHUB_TOKEN }}
-      #env:
-      #  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    #- name: Debug SBOM file
-     # run: |
-     #   ls -l *spdx.json || echo "SBOM file not found!"
-
-    #- name: Upload SBOM as artifact
-    #  uses: actions/upload-artifact@v4 # Updated to v4
-    #  with:
-    #    name: sbom-spdx-json
-    #    path: sbom.spdx.json
-
-    #- name: Install Trivy
-    #  run: |
-    #    sudo apt-get update
-    #    sudo apt-get install -y wget
-    #    wget https://github.com/aquasecurity/trivy/releases/latest/download/trivy_Linux-64bit.tar.gz
-    #    tar -xzf trivy_Linux-64bit.tar.gz
-    #    sudo mv trivy /usr/local/bin/
-
-    #- name: Install Trivy
-    #  run: |
-    #    wget https://github.com/aquasecurity/trivy/releases/latest/download/trivy_Linux-64bit.tar.gz
-    #    tar -xzf trivy_Linux-64bit.tar.gz
-    #    sudo mv trivy /usr/local/bin/  
-
-    #- name: Install Trivy
-    #  run: |
-    #    wget https://github.com/aquasecurity/trivy/releases/download/v0.18.3/trivy_0.18.3_Linux-64bit.deb
-    #    sudo dpkg -i trivy_0.18.3_Linux-64bit.deb
-    #    trivy --version  # Verify installation
-
+  
     - name: Install Trivy
       run: |
         # Fetch the latest release version dynamically
