--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -147,8 +147,11 @@ jobs:
         docker build --label "org.opencontainers.image.sbom=$SBOM_FILE" --tag $IMAGE_NAME .
         docker push $IMAGE_NAME
 
-    - name: Authenticate to Docker Hub
-      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+    #- name: Authenticate to Docker Hub
+    #  run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+    - name: Verify image exists on Docker Hub
+      run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/githubactions_cas2_3@${{ steps.build-push.outputs.digest }}
     
     # Sign the resulting Docker image digest except on PRs.
     # This will only write to the public Rekor transparency log when the Docker
