--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,10 +10,10 @@ name: Docker Image CI
 # Push SBOM to Docker Hub as an OCI Artifact
 # Upload SBOM to GitHub Release
 # Attaches the SBOM as a label to the Docker image in Docker Hub..
-# Signs the resulting container image digest and the SBOM with cosign 
+# Signs the resulting container image digest and the SBOM with cosign, using a user generated private key 
 # Install Trivy
-# Trivy vulnerability scan
-# Upload Vulnerability Scan Report
+# Trivy vulnerability scan 
+# Upload Vulnerability Scan Report to GitHUb as an artifact
 # Upload Trivy Vulnerability scan to GitHub Release
 
 on:
@@ -150,8 +150,8 @@ jobs:
     #- name: Authenticate to Docker Hub
     #  run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-    - name: Verify image exists on Docker Hub
-      run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/githubactions_cas2_3@${{ steps.build-push.outputs.digest }}
+    #- name: Verify image exists on Docker Hub
+    #  run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/githubactions_cas2_3@${{ steps.build-push.outputs.digest }}
     
     # Sign the resulting Docker image digest except on PRs.
     # This will only write to the public Rekor transparency log when the Docker
@@ -177,10 +177,7 @@ jobs:
         echo "Signing ${IMAGE}@${DIGEST}"
         cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${IMAGE}@${DIGEST}"
         #for tag in ${TAGS}; do
-        #  echo "Signing ${tag}@${DIGEST}"
-        #  cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${tag}@${DIGEST}"
-        #done
-
+        
     - name: Sign SBOM with Cosign
       env:
         COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
